// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Angular2 Todo 1`] = `
Object {
  "directory": undefined,
  "extensions": Array [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
    ".vue",
  ],
  "final": Object {
    "components": Array [
      Object {
        "patterns": Array [
          "node_modules/*",
        ],
        "type": "Dependency",
      },
      Object {
        "patterns": Array [
          "**/*.ts",
          "**/*.js",
          "**/*.jsx",
          "**/*.tsx",
        ],
        "type": "Component",
      },
      Object {
        "format": "full",
        "patterns": Array [
          "**/*.vue",
        ],
        "type": "Vue",
      },
    ],
    "excludePatterns": Array [],
    "output": Array [
      Object {
        "groups": Array [
          Object {
            "components": Array [
              "Component",
              "Vue",
            ],
            "first": true,
          },
          Object {
            "components": Array [
              "Dependency",
            ],
            "type": "Dependencies",
          },
        ],
        "path": Array [
          "svg",
        ],
      },
    ],
  },
}
`;

exports[`Config Express 1`] = `
Object {
  "directory": undefined,
  "extensions": Array [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
    ".vue",
  ],
  "final": Object {
    "components": Array [
      Object {
        "patterns": Array [
          "node_modules/*",
        ],
        "type": "Dependency",
      },
      Object {
        "patterns": Array [
          "**/*.ts",
          "**/*.js",
          "**/*.jsx",
          "**/*.tsx",
        ],
        "type": "Component",
      },
      Object {
        "format": "full",
        "patterns": Array [
          "**/*.vue",
        ],
        "type": "Vue",
      },
    ],
    "excludePatterns": Array [],
    "output": Array [
      Object {
        "groups": Array [
          Object {
            "components": Array [
              "Component",
              "Vue",
            ],
            "first": true,
          },
          Object {
            "components": Array [
              "Dependency",
            ],
            "type": "Dependencies",
          },
        ],
        "path": Array [
          "express.svg",
        ],
      },
    ],
  },
}
`;

exports[`Config Sample 1`] = `
Object {
  "directory": undefined,
  "extensions": Array [
    ".js",
    ".ts",
    ".jsx",
    ".tsx",
    ".vue",
  ],
  "final": Object {
    "components": Array [
      Object {
        "format": "full",
        "patterns": Array [
          "./main.ts",
          "./utils.ts",
        ],
        "type": "App",
      },
      Object {
        "patterns": Array [
          "**/*.view.**",
        ],
        "type": "View",
      },
      Object {
        "patterns": Array [
          "**/**component.**",
        ],
        "type": "Component",
      },
      Object {
        "patterns": Array [
          "**/controllers/*",
        ],
        "type": "Controller",
      },
      Object {
        "patterns": Array [
          "**/models/*",
        ],
        "type": "Model",
      },
    ],
    "excludePatterns": Array [],
    "output": Array [
      Object {
        "groups": Array [
          Object {
            "components": Array [
              "View",
              "Controller",
            ],
            "type": "Main",
          },
          Object {
            "components": Array [
              "Component",
              "Model",
            ],
            "type": "Base",
          },
          Object {
            "patterns": Array [
              "**/*",
            ],
          },
        ],
        "path": Array [
          "./docs/architecture.puml",
        ],
      },
      Object {
        "groups": undefined,
        "path": Array [
          "./docs/architecture.svg",
        ],
      },
    ],
  },
}
`;
